--- a/iDLG_covid_xray.ipynb
+++ b/iDLG_covid_xray.ipynb
@@ -9,7 +9,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 611,
+      "execution_count": 104,
       "metadata": {
         "id": "0tRnaSEm5GBf"
       },
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 612,
+      "execution_count": 105,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -94,7 +94,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 613,
+      "execution_count": 106,
       "metadata": {
         "id": "a1cIx7cs5mxk"
       },
@@ -124,7 +124,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 614,
+      "execution_count": 107,
       "metadata": {
         "id": "Qr6hLy1k5pSk"
       },
@@ -159,7 +159,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 615,
+      "execution_count": 108,
       "metadata": {
         "id": "zoIPNNul5r99"
       },
@@ -191,7 +191,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 616,
+      "execution_count": 109,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -201,20 +201,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 617,
+      "execution_count": 110,
       "metadata": {},
       "outputs": [],
       "source": [
         "##-- Define Hyperparameters --##\n",
         "LEARNING_RATE = 0.1\n",
         "NUM_DUMMY = 1 # number of dummy samples used in an experiment\n",
-        "ITERATION =5000 # might represent the number of training iterations or optimization steps (not epochs)\n",
+        "ITERATION =10000 # might represent the number of training iterations or optimization steps (not epochs)\n",
         "NUM_EXP = 1 # no of times the experiment is repeated to obtain statistically significant results"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 618,
+      "execution_count": 111,
       "metadata": {},
       "outputs": [
         {
@@ -249,7 +249,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 619,
+      "execution_count": 112,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -290,7 +290,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 620,
+      "execution_count": 113,
       "metadata": {
         "id": "WBxAAYGI577Q"
       },
@@ -303,8 +303,11 @@
         "\n",
         "    ##-- Train DLG and iDLG --##\n",
         "    for idx_net in range(NUM_EXP):\n",
-        "        model = CNN_Model(input_shape=in_channels, hidden_units=12, output_shape=num_classes)\n",
-        "        model.apply(weights_init) # apply custom weight initialization\n",
+        "        model = CNN_Model(input_shape=3, hidden_units=12, output_shape=3)\n",
+        "        model.load_state_dict(torch.load(\"CNN_Model50_0.001_32.pth\", map_location=torch.device('cpu'), weights_only=True))\n",
+        "        model.eval()\n",
+        "        #model = CNN_Model(input_shape=in_channels, hidden_units=12, output_shape=num_classes)\n",
+        "        #model.apply(weights_init) # apply custom weight initialization\n",
         "\n",
         "        print(f\"Running {idx_net}|{NUM_EXP} Experiment\")\n",
         "        model = model.to(device)\n",
@@ -392,7 +395,7 @@
         "                    history_iters.append(iters)\n",
         "\n",
         "                    for imidx in range(NUM_DUMMY):\n",
-        "                        plt.figure(figsize=(15, 8))\n",
+        "                        plt.figure(figsize=(12, 7))\n",
         "\n",
         "                        plt.subplot(5, 10, 1)\n",
         "                        plt.imshow(tp(gt_data[imidx].cpu())) # show original image\n",
@@ -426,7 +429,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 621,
+      "execution_count": 114,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -443,59 +446,59 @@
             "\n",
             "iDLG, Try to generate 1 images\n",
             "lr = 0.1\n",
-            "[2025-03-26 02:29:45] 0 loss = 105.90216827, mse = 1.12503135\n",
-            "[2025-03-26 02:29:53] 100 loss = 0.00022188, mse = 0.00130259\n",
-            "[2025-03-26 02:30:04] 200 loss = 0.00000154, mse = 0.00000795\n",
-            "[2025-03-26 02:30:06] 300 loss = 0.00000153, mse = 0.00000787\n",
-            "[2025-03-26 02:30:07] 400 loss = 0.00000153, mse = 0.00000787\n",
-            "[2025-03-26 02:30:07] 500 loss = 0.00000153, mse = 0.00000787\n",
-            "[2025-03-26 02:30:08] 600 loss = 0.00000153, mse = 0.00000787\n",
-            "[2025-03-26 02:30:09] 700 loss = 0.00000153, mse = 0.00000787\n",
-            "[2025-03-26 02:30:10] 800 loss = 0.00000153, mse = 0.00000787\n",
-            "[2025-03-26 02:30:11] 900 loss = 0.00000153, mse = 0.00000787\n",
-            "[2025-03-26 02:30:11] 1000 loss = 0.00000153, mse = 0.00000787\n",
-            "[2025-03-26 02:30:13] 1100 loss = 0.00000153, mse = 0.00000787\n",
-            "[2025-03-26 02:30:15] 1200 loss = 0.00000153, mse = 0.00000787\n",
-            "[2025-03-26 02:30:15] 1300 loss = 0.00000153, mse = 0.00000787\n",
-            "[2025-03-26 02:30:16] 1400 loss = 0.00000153, mse = 0.00000787\n",
-            "[2025-03-26 02:30:18] 1500 loss = 0.00000153, mse = 0.00000787\n",
-            "[2025-03-26 02:30:19] 1600 loss = 0.00000153, mse = 0.00000787\n",
-            "[2025-03-26 02:30:20] 1700 loss = 0.00000153, mse = 0.00000787\n",
-            "[2025-03-26 02:30:21] 1800 loss = 0.00000153, mse = 0.00000787\n",
-            "[2025-03-26 02:30:23] 1900 loss = 0.00000153, mse = 0.00000787\n",
-            "[2025-03-26 02:30:24] 2000 loss = 0.00000153, mse = 0.00000787\n",
-            "[2025-03-26 02:30:25] 2100 loss = 0.00000153, mse = 0.00000787\n",
-            "[2025-03-26 02:30:26] 2200 loss = 0.00000153, mse = 0.00000787\n",
-            "[2025-03-26 02:30:26] 2300 loss = 0.00000153, mse = 0.00000787\n",
-            "[2025-03-26 02:30:28] 2400 loss = 0.00000153, mse = 0.00000787\n",
-            "[2025-03-26 02:30:29] 2500 loss = 0.00000153, mse = 0.00000787\n",
-            "[2025-03-26 02:30:31] 2600 loss = 0.00000153, mse = 0.00000787\n",
-            "[2025-03-26 02:30:32] 2700 loss = 0.00000153, mse = 0.00000787\n",
-            "[2025-03-26 02:30:34] 2800 loss = 0.00000153, mse = 0.00000787\n",
-            "[2025-03-26 02:30:35] 2900 loss = 0.00000153, mse = 0.00000787\n",
-            "[2025-03-26 02:30:36] 3000 loss = 0.00000153, mse = 0.00000787\n",
-            "[2025-03-26 02:30:37] 3100 loss = 0.00000153, mse = 0.00000787\n",
-            "[2025-03-26 02:30:38] 3200 loss = 0.00000153, mse = 0.00000787\n",
-            "[2025-03-26 02:30:39] 3300 loss = 0.00000153, mse = 0.00000787\n",
-            "[2025-03-26 02:30:40] 3400 loss = 0.00000153, mse = 0.00000787\n",
-            "[2025-03-26 02:30:41] 3500 loss = 0.00000153, mse = 0.00000787\n",
-            "[2025-03-26 02:30:42] 3600 loss = 0.00000153, mse = 0.00000787\n",
-            "[2025-03-26 02:30:43] 3700 loss = 0.00000153, mse = 0.00000787\n",
-            "[2025-03-26 02:30:44] 3800 loss = 0.00000153, mse = 0.00000787\n",
-            "[2025-03-26 02:30:46] 3900 loss = 0.00000153, mse = 0.00000787\n",
-            "[2025-03-26 02:30:47] 4000 loss = 0.00000153, mse = 0.00000787\n",
-            "[2025-03-26 02:30:48] 4100 loss = 0.00000153, mse = 0.00000787\n",
-            "[2025-03-26 02:30:49] 4200 loss = 0.00000153, mse = 0.00000787\n",
-            "[2025-03-26 02:30:50] 4300 loss = 0.00000153, mse = 0.00000787\n",
-            "[2025-03-26 02:30:51] 4400 loss = 0.00000153, mse = 0.00000787\n",
-            "[2025-03-26 02:30:52] 4500 loss = 0.00000153, mse = 0.00000787\n",
-            "[2025-03-26 02:30:53] 4600 loss = 0.00000153, mse = 0.00000787\n",
-            "[2025-03-26 02:30:54] 4700 loss = 0.00000153, mse = 0.00000787\n",
-            "[2025-03-26 02:30:55] 4800 loss = 0.00000153, mse = 0.00000787\n",
-            "[2025-03-26 02:30:56] 4900 loss = 0.00000153, mse = 0.00000787\n",
-            "idx_list: [np.int64(5646)]\n",
-            "loss_iDLG: 1.5304671023841365e-06\n",
-            "mse_iDLG: 7.869965884310659e-06\n",
+            "[2025-03-27 22:00:26] 0 loss = 425.91748047, mse = 1.27516174\n",
+            "[2025-03-27 22:00:42] 200 loss = 0.15758747, mse = 1.12294734\n",
+            "[2025-03-27 22:00:57] 400 loss = 0.01457909, mse = 0.42144623\n",
+            "[2025-03-27 22:01:12] 600 loss = 0.00125035, mse = 0.19411831\n",
+            "[2025-03-27 22:01:27] 800 loss = 0.00036611, mse = 0.10523631\n",
+            "[2025-03-27 22:01:43] 1000 loss = 0.00014640, mse = 0.06050003\n",
+            "[2025-03-27 22:01:58] 1200 loss = 0.00007101, mse = 0.04226008\n",
+            "[2025-03-27 22:02:13] 1400 loss = 0.00004011, mse = 0.03197945\n",
+            "[2025-03-27 22:02:27] 1600 loss = 0.00002727, mse = 0.02719887\n",
+            "[2025-03-27 22:02:29] 1800 loss = 0.00002686, mse = 0.02702571\n",
+            "[2025-03-27 22:02:30] 2000 loss = 0.00002686, mse = 0.02702571\n",
+            "[2025-03-27 22:02:31] 2200 loss = 0.00002686, mse = 0.02702571\n",
+            "[2025-03-27 22:02:34] 2400 loss = 0.00002686, mse = 0.02702571\n",
+            "[2025-03-27 22:02:35] 2600 loss = 0.00002686, mse = 0.02702571\n",
+            "[2025-03-27 22:02:36] 2800 loss = 0.00002686, mse = 0.02702571\n",
+            "[2025-03-27 22:02:37] 3000 loss = 0.00002686, mse = 0.02702571\n",
+            "[2025-03-27 22:02:39] 3200 loss = 0.00002686, mse = 0.02702571\n",
+            "[2025-03-27 22:02:40] 3400 loss = 0.00002686, mse = 0.02702571\n",
+            "[2025-03-27 22:02:41] 3600 loss = 0.00002686, mse = 0.02702571\n",
+            "[2025-03-27 22:02:43] 3800 loss = 0.00002686, mse = 0.02702571\n",
+            "[2025-03-27 22:02:44] 4000 loss = 0.00002686, mse = 0.02702571\n",
+            "[2025-03-27 22:02:45] 4200 loss = 0.00002686, mse = 0.02702571\n",
+            "[2025-03-27 22:02:47] 4400 loss = 0.00002686, mse = 0.02702571\n",
+            "[2025-03-27 22:02:48] 4600 loss = 0.00002686, mse = 0.02702571\n",
+            "[2025-03-27 22:02:49] 4800 loss = 0.00002686, mse = 0.02702571\n",
+            "[2025-03-27 22:02:51] 5000 loss = 0.00002686, mse = 0.02702571\n",
+            "[2025-03-27 22:02:52] 5200 loss = 0.00002686, mse = 0.02702571\n",
+            "[2025-03-27 22:02:53] 5400 loss = 0.00002686, mse = 0.02702571\n",
+            "[2025-03-27 22:02:55] 5600 loss = 0.00002686, mse = 0.02702571\n",
+            "[2025-03-27 22:02:56] 5800 loss = 0.00002686, mse = 0.02702571\n",
+            "[2025-03-27 22:02:57] 6000 loss = 0.00002686, mse = 0.02702571\n",
+            "[2025-03-27 22:02:59] 6200 loss = 0.00002686, mse = 0.02702571\n",
+            "[2025-03-27 22:03:00] 6400 loss = 0.00002686, mse = 0.02702571\n",
+            "[2025-03-27 22:03:02] 6600 loss = 0.00002686, mse = 0.02702571\n",
+            "[2025-03-27 22:03:03] 6800 loss = 0.00002686, mse = 0.02702571\n",
+            "[2025-03-27 22:03:04] 7000 loss = 0.00002686, mse = 0.02702571\n",
+            "[2025-03-27 22:03:06] 7200 loss = 0.00002686, mse = 0.02702571\n",
+            "[2025-03-27 22:03:07] 7400 loss = 0.00002686, mse = 0.02702571\n",
+            "[2025-03-27 22:03:09] 7600 loss = 0.00002686, mse = 0.02702571\n",
+            "[2025-03-27 22:03:11] 7800 loss = 0.00002686, mse = 0.02702571\n",
+            "[2025-03-27 22:03:12] 8000 loss = 0.00002686, mse = 0.02702571\n",
+            "[2025-03-27 22:03:13] 8200 loss = 0.00002686, mse = 0.02702571\n",
+            "[2025-03-27 22:03:15] 8400 loss = 0.00002686, mse = 0.02702571\n",
+            "[2025-03-27 22:03:17] 8600 loss = 0.00002686, mse = 0.02702571\n",
+            "[2025-03-27 22:03:18] 8800 loss = 0.00002686, mse = 0.02702571\n",
+            "[2025-03-27 22:03:20] 9000 loss = 0.00002686, mse = 0.02702571\n",
+            "[2025-03-27 22:03:21] 9200 loss = 0.00002686, mse = 0.02702571\n",
+            "[2025-03-27 22:03:23] 9400 loss = 0.00002686, mse = 0.02702571\n",
+            "[2025-03-27 22:03:24] 9600 loss = 0.00002686, mse = 0.02702571\n",
+            "[2025-03-27 22:03:26] 9800 loss = 0.00002686, mse = 0.02702571\n",
+            "idx_list: [np.int64(5978)]\n",
+            "loss_iDLG: 2.68625226453878e-05\n",
+            "mse_iDLG: 0.02702571451663971\n",
             "gt_label: [1] lab_iDLG: 1\n",
             "--------------------------------------------\n",
             "\n"
